<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Parse_error_dlg_text">There was a problem parsing the package.</string>
    <string name="anonymous_source_continue">Continue</string>
    <string name="anonymous_source_warning">Your phone and personal data are more vulnerable to attack by unknown apps. By installing this app, you agree that you are responsible for any damage to your phone or loss of data that may result from its use.</string>
    <string name="app_installed_notification_channel_description">App installed notification</string>
    <string name="app_name">Package installer</string>
    <string name="app_name_unknown">Unknown</string>
    <string name="app_not_found_dlg_text">The app wasn\'t found in the list of installed apps.</string>
    <string name="app_not_found_dlg_title">App not found</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="external_sources_settings">Settings</string>
    <string name="generic_error_dlg_text">App could not be uninstalled.</string>
    <string name="generic_error_dlg_title">Error</string>
    <string name="help_app_permissions" />
    <string name="install">Install</string>
    <string name="install_apps_user_restriction_dlg_text">This user is not allowed to install apps</string>
    <string name="install_confirm_question">Do you want to install this application?</string>
    <string name="install_confirm_question_update">Do you want to install an update to this existing application? Your existing data will not be lost.</string>
    <string name="install_confirm_question_update_system">Do you want to install an update to this built-in application? Your existing data will not be lost.</string>
    <string name="install_done">App installed.</string>
    <string name="install_failed">App not installed.</string>
    <string name="install_failed_blocked">The package was blocked from being installed.</string>
    <string name="install_failed_conflict">App not installed as package conflicts with an existing package.</string>
    <string name="install_failed_incompatible">App not installed as app isn\'t compatible with your phone.</string>
    <string name="install_failed_invalid_apk">App not installed as package appears to be invalid.</string>
    <string name="install_failed_msg">%1$s couldn\'t be installed on your phone.</string>
    <string name="installing">Installing…</string>
    <string name="installing_app">Installing %1$s…</string>
    <string name="launch">Open</string>
    <string name="lb_control_display_fast_forward_multiplier">%1$dX</string>
    <string name="lb_control_display_rewind_multiplier">%1$dX</string>
    <string name="lb_guidedaction_continue_title">Continue</string>
    <string name="lb_guidedaction_finish_title">Finish</string>
    <string name="lb_media_player_error">MediaPlayer error code %1$d extra %2$d</string>
    <string name="lb_navigation_menu_contentDescription">Navigation menu</string>
    <string name="lb_onboarding_accessibility_next">Next</string>
    <string name="lb_onboarding_get_started">GET STARTED</string>
    <string name="lb_playback_controls_closed_captioning_disable">Disable Closed Captioning</string>
    <string name="lb_playback_controls_closed_captioning_enable">Enable Closed Captioning</string>
    <string name="lb_playback_controls_fast_forward">Fast Forward</string>
    <string name="lb_playback_controls_fast_forward_multiplier">Fast Forward %1$dX</string>
    <string name="lb_playback_controls_hidden">Media controls hidden, press d-pad to show</string>
    <string name="lb_playback_controls_high_quality_disable">Disable High Quality</string>
    <string name="lb_playback_controls_high_quality_enable">Enable High Quality</string>
    <string name="lb_playback_controls_more_actions">More Actions</string>
    <string name="lb_playback_controls_pause">Pause</string>
    <string name="lb_playback_controls_picture_in_picture">Enter Picture In Picture Mode</string>
    <string name="lb_playback_controls_play">Play</string>
    <string name="lb_playback_controls_repeat_all">Repeat All</string>
    <string name="lb_playback_controls_repeat_none">Repeat None</string>
    <string name="lb_playback_controls_repeat_one">Repeat One</string>
    <string name="lb_playback_controls_rewind">Rewind</string>
    <string name="lb_playback_controls_rewind_multiplier">Rewind %1$dX</string>
    <string name="lb_playback_controls_shown">Media controls shown</string>
    <string name="lb_playback_controls_shuffle_disable">Disable Shuffle</string>
    <string name="lb_playback_controls_shuffle_enable">Enable Shuffle</string>
    <string name="lb_playback_controls_skip_next">Skip Next</string>
    <string name="lb_playback_controls_skip_previous">Skip Previous</string>
    <string name="lb_playback_controls_thumb_down">Deselect Thumb Down</string>
    <string name="lb_playback_controls_thumb_down_outline">Select Thumb Down</string>
    <string name="lb_playback_controls_thumb_up">Deselect Thumb Up</string>
    <string name="lb_playback_controls_thumb_up_outline">Select Thumb Up</string>
    <string name="lb_playback_time_separator">/</string>
    <string name="lb_search_bar_hint">Search</string>
    <string name="lb_search_bar_hint_speech">Speak to search</string>
    <string name="lb_search_bar_hint_with_title">Search %1$s</string>
    <string name="lb_search_bar_hint_with_title_speech">Speak to search %1$s</string>
    <string name="manage_applications">Manage apps</string>
    <string name="manage_device_administrators">Manage device admin apps</string>
    <string name="manage_users">Manage users</string>
    <string name="message_staging">Staging app…</string>
    <string name="notification_installation_success_message">Successfully installed</string>
    <string name="notification_installation_success_status">Successfully installed “%1$s”</string>
    <string name="ok">OK</string>
    <string name="orb_search_action">Search Action</string>
    <string name="out_of_space_dlg_text">%1$s couldn\'t be installed. Free up some space and try again.</string>
    <string name="out_of_space_dlg_title">Out of space</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="uninstall_activity_text">%1$s is part of the following app:</string>
    <string name="uninstall_all_blocked_profile_owner">This app is required for some users or profiles and was uninstalled for others</string>
    <string name="uninstall_application_text">Do you want to uninstall this app?</string>
    <string name="uninstall_application_text_all_users">Do you want to uninstall this app for all users? The application and its data will be removed from all users on the device.</string>
    <string name="uninstall_application_text_user">Do you want to uninstall this app for the user %1$s?</string>
    <string name="uninstall_application_title">Uninstall app</string>
    <string name="uninstall_blocked_device_owner">This app is required by your device administrator and can\'t be uninstalled.</string>
    <string name="uninstall_blocked_profile_owner">This app is needed for your profile and can\'t be uninstalled.</string>
    <string name="uninstall_done">Uninstall finished.</string>
    <string name="uninstall_done_app">Uninstalled %1$s</string>
    <string name="uninstall_failed">Uninstall unsuccessful.</string>
    <string name="uninstall_failed_app">Uninstalling %1$s unsuccessful.</string>
    <string name="uninstall_failed_device_policy_manager">Can\'t uninstall active device admin app</string>
    <string name="uninstall_failed_device_policy_manager_of_user">Can\'t uninstall active device admin app for %1$s</string>
    <string name="uninstall_failed_msg">%1$s couldn\'t be uninstalled.</string>
    <string name="uninstall_failure_notification_channel">Failed uninstalls</string>
    <string name="uninstall_keep_data">Keep %1$s of app data.</string>
    <string name="uninstall_update_text">Replace this app with the factory version? All data will be removed.</string>
    <string name="uninstall_update_text_multiuser">Replace this app with the factory version? All data will be removed. This affects all users of this device, including those with work profiles.</string>
    <string name="uninstall_update_title">Uninstall update</string>
    <string name="uninstalling">Uninstalling…</string>
    <string name="uninstalling_app">Uninstalling %1$s…</string>
    <string name="uninstalling_notification_channel">Running uninstalls</string>
    <string name="unknown_apps_admin_dlg_text">Your admin doesn\'t allow installation of apps obtained from unknown sources</string>
    <string name="unknown_apps_user_restriction_dlg_text">Unknown apps can\'t be installed by this user</string>
    <string name="untrusted_external_source_warning">For your security, your phone is not allowed to install unknown apps from this source.</string>
    <string name="user_is_not_allowed_dlg_text">The current user is not allowed to perform this uninstallation.</string>
    <string name="user_is_not_allowed_dlg_title">Not allowed</string>
    <string name="wear_app_channel">Installing/uninstalling wear apps</string>
    <string name="wear_not_allowed_dlg_text">Install/Uninstall actions not supported on Wear.</string>
    <string name="wear_not_allowed_dlg_title">Android Wear</string>
</resources>
