<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:theme="?android:attr/alertDialogTheme" android:paddingLeft="?android:attr/dialogPreferredPadding" android:paddingTop="8dp" android:paddingRight="?android:attr/dialogPreferredPadding" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/staging" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message_staging" style="@android:style/TextAppearance.Material.Subhead"/>
        <ProgressBar android:id="@+id/progress_indeterminate" android:paddingTop="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:indeterminate="true" style="?android:attr/progressBarStyleHorizontal"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/installing" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/installing" style="@android:style/TextAppearance.Material.Subhead"/>
        <ProgressBar android:id="@+id/progress" android:paddingTop="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" style="?android:attr/progressBarStyleHorizontal"/>
    </LinearLayout>
    <TextView android:id="@+id/install_confirm_question" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/install_confirm_question" style="@android:style/TextAppearance.Material.Subhead"/>
    <TextView android:id="@+id/install_confirm_question_update" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/install_confirm_question_update" style="@android:style/TextAppearance.Material.Subhead"/>
    <TextView android:id="@+id/install_confirm_question_update_system" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/install_confirm_question_update_system" style="@android:style/TextAppearance.Material.Subhead"/>
    <TextView android:id="@+id/install_success" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/install_done" style="@android:style/TextAppearance.Material.Subhead"/>
    <TextView android:id="@+id/install_failed" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/install_failed" style="@android:style/TextAppearance.Material.Subhead"/>
    <TextView android:id="@+id/install_failed_blocked" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/install_failed_blocked" style="@android:style/TextAppearance.Material.Subhead"/>
    <TextView android:id="@+id/install_failed_conflict" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/install_failed_conflict" style="@android:style/TextAppearance.Material.Subhead"/>
    <TextView android:id="@+id/install_failed_incompatible" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/install_failed_incompatible" style="@android:style/TextAppearance.Material.Subhead"/>
    <TextView android:id="@+id/install_failed_invalid_apk" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/install_failed_invalid_apk" style="@android:style/TextAppearance.Material.Subhead"/>
</FrameLayout>
